--- a/styles/bio.css
+++ b/styles/bio.css
@@ -46,7 +46,12 @@ a {
 }
 
 h2, h3 {
-  padding: 24px 0 1rem 1rem;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  h2, h3 {
+    padding: 3rem 0 2.25rem 2.25rem;
+  }
 }
 
 .site-header {
@@ -65,6 +70,11 @@ h2, h3 {
   display: flex;
   align-self: center;
   padding: 1rem 0;
+}
+@media (min-width: 768px) {
+  .site-header__logo {
+    margin: 1rem 1rem 1rem 36px;
+  }
 }
 .site-header__list {
   width: 100%;
@@ -88,7 +98,6 @@ h2, h3 {
 .site-header__item--highlight {
   width: 50%;
   border-bottom: 0.2rem solid #e1e1e1;
-  padding-bottom: 0.4rem;
 }
 @media (min-width: 768px) {
   .site-header__item--highlight {
@@ -100,20 +109,26 @@ h2, h3 {
 }
 .site-header__link--highlight {
   color: #fff;
-  font-weight: bold;
+  font-weight: 600;
 }
 @media (min-width: 768px) {
   .site-header__link--highlight {
-    border-bottom: 0.2rem solid #e1e1e1;
-    padding-bottom: 1.3rem;
+    border-bottom: 0.3rem solid #fff;
+    padding-bottom: 2rem;
   }
 }
 
 .site-footer {
-  padding: 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   background-color: #323232;
   color: #e1e1e1;
   position: relative;
+}
+@media (min-width: 768px) {
+  .site-footer {
+    padding: 0;
+    padding: 3rem 0 2.25rem 2.25rem;
+  }
 }
 @media (min-width: 768px) {
   .site-footer__top {
@@ -124,8 +139,34 @@ h2, h3 {
 .site-footer__top--title {
   padding-left: 0;
 }
+@media (min-width: 768px) {
+  .site-footer__top--title {
+    font-size: 2.5rem;
+    padding-right: 1rem;
+  }
+}
 .site-footer__top--svg {
   padding-right: 30px;
+}
+@media (min-width: 768px) {
+  .site-footer__top--svg {
+    padding: 0;
+    margin: 3.4rem 1rem 0 1rem;
+    width: auto;
+    height: 1.7rem;
+  }
+}
+.site-footer__contact {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .site-footer__contact {
+    padding-right: 1.2rem;
+  }
+}
+.site-footer__contact-container {
+  line-height: 150%;
 }
 @media (min-width: 768px) {
   .site-footer__contact-container {
@@ -133,18 +174,13 @@ h2, h3 {
     flex-direction: row;
   }
 }
-.site-footer__contact-container__contact {
-  display: flex;
-  flex-direction: column;
-}
-.site-footer__contact-container__contact--name-position {
+.site-footer__contact--name-position {
   color: #fff;
+}
+.site-footer__contact--destination {
   padding-top: 2rem;
 }
-.site-footer__contact-container__contact--destination {
-  padding-top: 2rem;
-}
-.site-footer__contact-container__contact--email {
+.site-footer__contact--email {
   padding-top: 2rem;
 }
 .site-footer__bottom--logo {
@@ -154,7 +190,7 @@ h2, h3 {
 @media (min-width: 768px) {
   .site-footer__bottom--logo {
     padding: 0;
-    margin: 2rem 2rem;
+    margin: 4.6rem 2rem;
     position: absolute;
     right: 0;
     top: 0;
@@ -163,6 +199,12 @@ h2, h3 {
 .site-footer__bottom--text {
   font-size: 0.7rem;
   padding: 1rem 0;
+}
+@media (min-width: 768px) {
+  .site-footer__bottom--text {
+    padding: 3rem 0 1rem 0;
+    font-size: 1rem;
+  }
 }
 
 * {
@@ -202,26 +244,26 @@ h2, h3 {
   .hero-banner__title {
     font-size: 4rem;
     font-weight: 600;
+    padding: 3rem 0 2.25rem 2.25rem;
   }
 }
 
 @media (min-width: 768px) {
   .main-content__title {
     font-size: 2.5rem;
-    font-weight: 600;
   }
 }
 .main-content__photo {
-  padding: 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   max-width: 100%;
 }
 .main-content__about {
-  padding: 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   font-weight: bold;
   line-height: 180%;
 }
 .main-content__description {
-  padding: 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
 }
 .main-content__description--title {
   padding-left: 0;
@@ -243,7 +285,7 @@ h2, h3 {
   }
 }
 .main-content__gallery {
-  padding: 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   background-color: #fafafa;
 }
 .main-content__gallery--title {
