--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,9 +1,12 @@
+.gallery-section {
+  padding: 0 1rem 0 1rem;
+}
 @media (min-width: 768px) {
   .gallery-section {
+    padding: 0 2.25rem 2.25rem 2.25rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 3rem;
+    justify-content: space-between;
   }
 }
 .gallery-section__photo {
@@ -12,8 +15,7 @@
 }
 @media (min-width: 768px) {
   .gallery-section__photo {
-    width: 14rem;
-    padding: 0.313rem 0.313rem;
+    width: 31%;
   }
 }
 
@@ -50,7 +52,7 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   h2, h3 {
-    padding: 3rem 0 2.25rem 2.25rem;
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
   }
 }
 
@@ -76,6 +78,11 @@ h2, h3 {
     margin: 1rem 1rem 1rem 36px;
   }
 }
+@media (min-width: 1280px) {
+  .site-header__logo {
+    padding-left: 4rem;
+  }
+}
 .site-header__list {
   width: 100%;
   list-style: none;
@@ -87,6 +94,12 @@ h2, h3 {
     padding-left: 4rem;
   }
 }
+@media (min-width: 1280px) {
+  .site-header__list {
+    font-size: 0.6rem;
+    padding-left: 1rem;
+  }
+}
 .site-header__item {
   width: 50%;
 }
@@ -95,13 +108,20 @@ h2, h3 {
     padding-left: 3rem;
   }
 }
+@media (min-width: 1280px) {
+  .site-header__item {
+    padding-left: 2rem;
+  }
+}
 .site-header__item--highlight {
   width: 50%;
   border-bottom: 0.2rem solid #e1e1e1;
+  padding-bottom: 0.7rem;
 }
 @media (min-width: 768px) {
   .site-header__item--highlight {
     border-bottom: 0;
+    padding-bottom: 0;
   }
 }
 .site-header__link {
@@ -117,9 +137,15 @@ h2, h3 {
     padding-bottom: 2rem;
   }
 }
+@media (min-width: 1280px) {
+  .site-header__link--highlight {
+    font-weight: 400;
+    padding-bottom: 2rem;
+    letter-spacing: 0.05rem;
+  }
+}
 
 .site-footer {
-  padding: 1.5rem 1rem 1rem 1rem;
   background-color: #323232;
   color: #e1e1e1;
   position: relative;
@@ -127,33 +153,38 @@ h2, h3 {
 @media (min-width: 768px) {
   .site-footer {
     padding: 0;
-    padding: 3rem 0 2.25rem 2.25rem;
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
   }
 }
 @media (min-width: 768px) {
   .site-footer__top {
+    margin-bottom: 1.5rem;
     display: flex;
     flex-direction: row;
+    align-items: baseline;
   }
 }
 .site-footer__top--title {
-  padding-left: 0;
+  color: #fff;
+  font-size: 1.7rem;
+  padding: 1.5rem 1rem 1rem 1rem;
 }
 @media (min-width: 768px) {
   .site-footer__top--title {
-    font-size: 2.5rem;
-    padding-right: 1rem;
+    font-size: 2.6rem;
+    padding: 0 2rem 0 0;
   }
 }
 .site-footer__top--svg {
-  padding-right: 30px;
+  padding: 0 1rem 0 1rem;
+  padding-right: 20px;
+  width: auto;
+  height: 1.7rem;
 }
 @media (min-width: 768px) {
   .site-footer__top--svg {
     padding: 0;
-    margin: 3.4rem 1rem 0 1rem;
-    width: auto;
-    height: 1.7rem;
+    margin-right: 2rem;
   }
 }
 .site-footer__contact {
@@ -162,35 +193,47 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .site-footer__contact {
-    padding-right: 1.2rem;
+    width: 40%;
   }
 }
 .site-footer__contact-container {
   line-height: 150%;
+  padding: 1.5rem 1rem 1rem 1rem;
 }
 @media (min-width: 768px) {
   .site-footer__contact-container {
+    padding: 0;
     display: flex;
     flex-direction: row;
   }
 }
-.site-footer__contact--name-position {
+@media (min-width: 1280px) {
+  .site-footer__contact-container {
+    width: 65%;
+  }
+}
+.site-footer__contact--name {
+  color: #fff;
+  font-weight: 400;
+  padding-top: 1rem;
+}
+.site-footer__contact--position {
   color: #fff;
 }
 .site-footer__contact--destination {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
 }
 .site-footer__contact--email {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
 }
 .site-footer__bottom--logo {
   width: 9rem;
-  padding-top: 5.5rem;
+  margin: 2rem 0 0 1rem;
 }
 @media (min-width: 768px) {
   .site-footer__bottom--logo {
     padding: 0;
-    margin: 4.6rem 2rem;
+    margin: 3.5rem 2rem;
     position: absolute;
     right: 0;
     top: 0;
@@ -198,11 +241,11 @@ h2, h3 {
 }
 .site-footer__bottom--text {
   font-size: 0.7rem;
-  padding: 1rem 0;
+  padding: 1.5rem 1rem 1rem 1rem;
 }
 @media (min-width: 768px) {
   .site-footer__bottom--text {
-    padding: 3rem 0 1rem 0;
+    padding: 3rem 0 0 0;
     font-size: 1rem;
   }
 }
@@ -225,6 +268,12 @@ h2, h3 {
     min-height: 33rem;
   }
 }
+@media (min-width: 1280px) {
+  .hero-banner {
+    min-height: 47rem;
+    min-width: 20rem;
+  }
+}
 .hero-banner:before {
   content: "";
   position: absolute;
@@ -236,6 +285,7 @@ h2, h3 {
   bottom: 0;
 }
 .hero-banner__title {
+  font-weight: 600;
   padding-left: 16px;
   color: #fff;
   z-index: 10;
@@ -244,50 +294,134 @@ h2, h3 {
   .hero-banner__title {
     font-size: 4rem;
     font-weight: 600;
-    padding: 3rem 0 2.25rem 2.25rem;
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero-banner__title {
+    padding: 3rem 6rem 2.25rem 6rem;
+    font-size: 3rem;
   }
 }
 
+.main-content__title {
+  font-size: 1.7rem;
+  padding: 1.5rem 1rem 1rem 1rem;
+}
 @media (min-width: 768px) {
   .main-content__title {
-    font-size: 2.5rem;
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
+    font-size: 2.8rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__title {
+    padding: 3rem 6rem 2.25rem 6rem;
+    font-size: 1.7rem;
   }
 }
 .main-content__photo {
-  padding: 1.5rem 1rem 1rem 1rem;
+  padding: 0 1rem 0 1rem;
   max-width: 100%;
+}
+@media (min-width: 768px) {
+  .main-content__photo {
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__photo {
+    padding: 0.5rem 10rem 0.5rem 10rem;
+  }
 }
 .main-content__about {
   padding: 1.5rem 1rem 1rem 1rem;
-  font-weight: bold;
+  font-weight: 600;
   line-height: 180%;
 }
-.main-content__description {
-  padding: 1.5rem 1rem 1rem 1rem;
+@media (min-width: 768px) {
+  .main-content__about {
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__about {
+    padding: 0.5rem 10rem 0.5rem 10rem;
+    line-height: 150%;
+    font-size: 1rem;
+    width: 62%;
+  }
+}
+@media (min-width: 768px) {
+  .main-content__about--reference {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__about--reference {
+    font-size: 0.75rem;
+  }
 }
 .main-content__description--title {
   padding-left: 0;
-  font-weight: normal;
+  font-weight: 600;
+  padding: 1.5rem 1rem 1rem 1rem;
+}
+@media (min-width: 768px) {
+  .main-content__description--title {
+    padding: 3rem 0 1.5rem 7.188rem;
+    font-size: 1.7rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__description--title {
+    padding: 2rem 0 1.5rem 10rem;
+    font-size: 1.1rem;
+  }
+}
+.main-content__description-container {
+  padding: 0 1rem 0 1rem;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .main-content__description-container {
     display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__description-container {
+    padding: 0.5rem 10rem 0.5rem 10rem;
   }
 }
 .main-content__description--paragraph {
   padding: 0 0 20px 0;
   line-height: 150%;
-  width: 100%;
 }
 @media (min-width: 768px) {
   .main-content__description--paragraph {
-    width: 50%;
+    font-size: 1rem;
+    width: 47%;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__description--paragraph {
+    font-size: 0.7rem;
+    width: 49%;
   }
 }
 .main-content__gallery {
-  padding: 1.5rem 1rem 1rem 1rem;
   background-color: #fafafa;
 }
 .main-content__gallery--title {
-  padding-left: 0;
+  font-size: 1.7rem;
+  padding: 1.5rem 1rem 1rem 1rem;
+}
+@media (min-width: 768px) {
+  .main-content__gallery--title {
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
+    font-size: 2.8rem;
+  }
 }/*# sourceMappingURL=bio.css.map */
