--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -16,8 +16,14 @@
     display: flex;
     align-items: center;
     position: relative;
+
     @include tablet {
         min-height: 33rem;
+    }
+
+    @include desktop {
+        min-height: 47rem;
+        min-width: 20rem;
     }
 
     &:before {
@@ -33,13 +39,20 @@
     }
 
     &__title {
+        font-weight: 600;
         padding-left: 16px;
         color: $primary-background;
         z-index: 10;
+
         @include tablet {
             font-size: 4rem;
             font-weight: 600;
-            @include larger-padding;
+            @include tablet-padding;
+        }
+
+        @include desktop {
+            @include desktop-padding;
+            font-size: 3rem;
         }
     }
 }
@@ -47,52 +60,122 @@
 .main-content {
 
     &__title {
+        font-size: 1.7rem;
+        @include primary-padding;
+
         @include tablet {
-            font-size: 2.5rem;
+            @include tablet-padding;
+            font-size: 2.8rem;
+        }
+
+        @include desktop {
+            @include desktop-padding;
+            font-size: 1.7rem;
         }
     }
 
     &__photo {
-        @include primary-padding;
+        @include primary-padding-content;
         max-width: 100%;
+        
+        @include tablet {
+            @include tablet-larger-padding;
+        }
+
+        @include desktop {
+            @include desktop-larger-padding;
+        }
     }
 
     &__about {
         @include primary-padding;
-        font-weight: bold;
+        font-weight: 600;
         line-height: 180%;
+
+        @include tablet {
+            @include tablet-larger-padding;
+            font-size: 1.5rem;
+        }
+
+        @include desktop {
+            @include desktop-larger-padding;
+            line-height: 150%;
+            font-size: 1rem;
+            width: 62%;
+        }
+
+        &--reference {
+
+            @include tablet {
+                font-size: 1.25rem;
+            }
+
+            @include desktop {
+                font-size: 0.75rem;
+            }
+        }
     }
 
     &__description {
-        @include primary-padding;
 
         &--title {
             padding-left: 0;
-            font-weight: normal;
+            font-weight: 600;
+            @include primary-padding;
+
+            @include tablet {
+                padding: 3rem 0 1.5rem 7.188rem;
+                font-size: 1.7rem;
+            }
+
+            @include desktop {
+                padding: 2rem 0 1.5rem 10rem;
+                font-size: 1.1rem;
+            }
         }
 
         &-container {
+            @include primary-padding-content;
+            width: 100%;
+
             @include tablet {
                 display: flex;
+                justify-content: space-between;
+                @include tablet-larger-padding;
+            }
+
+            @include desktop {
+                @include desktop-larger-padding;
             }
         }
 
         &--paragraph {
             padding: 0 0 20px 0;
             line-height: 150%;
-            width: 100%;
+
             @include tablet {
-                width: 50%;
+                font-size: 1rem;
+                width: 47%;
+            }
+
+            @include desktop {
+                font-size: 0.7rem;
+                width: 49%;
             }
         }
     }
 
     &__gallery {
-        @include primary-padding;
-        background-color: $alternative-light;
+        background-color: $gallery-background;
 
         &--title {
-            padding-left: 0;
+            font-size: 1.7rem;
+            @include primary-padding;
+
+            @include tablet {
+                @include tablet-padding;
+                font-size: 2.8rem;
+            }
         }
     }
 
