--- a/styles/bio.css
+++ b/styles/bio.css
@@ -9,6 +9,11 @@
     justify-content: space-between;
   }
 }
+@media (min-width: 1280px) {
+  .gallery-section {
+    padding: 3rem 6rem 2.25rem 6rem;
+  }
+}
 .gallery-section__photo {
   max-width: 100%;
   padding: 0.313rem 0;
@@ -50,11 +55,6 @@ a {
 h2, h3 {
   font-weight: 600;
 }
-@media (min-width: 768px) {
-  h2, h3 {
-    padding: 3rem 2.25rem 2.25rem 2.25rem;
-  }
-}
 
 .site-header {
   background-color: #323232;
@@ -75,7 +75,7 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .site-header__logo {
-    margin: 1rem 1rem 1rem 36px;
+    margin: 1rem 1rem 1rem 2.25rem;
   }
 }
 @media (min-width: 1280px) {
@@ -156,6 +156,11 @@ h2, h3 {
     padding: 3rem 2.25rem 2.25rem 2.25rem;
   }
 }
+@media (min-width: 1280px) {
+  .site-footer {
+    padding: 3rem 6rem 2.25rem 6rem;
+  }
+}
 @media (min-width: 768px) {
   .site-footer__top {
     margin-bottom: 1.5rem;
@@ -175,9 +180,15 @@ h2, h3 {
     padding: 0 2rem 0 0;
   }
 }
+@media (min-width: 1280px) {
+  .site-footer__top--title {
+    font-size: 1.6rem;
+    padding-right: 2.4rem;
+  }
+}
 .site-footer__top--svg {
   padding: 0 1rem 0 1rem;
-  padding-right: 20px;
+  padding-right: 1.25rem;
   width: auto;
   height: 1.7rem;
 }
@@ -187,6 +198,12 @@ h2, h3 {
     margin-right: 2rem;
   }
 }
+@media (min-width: 1280px) {
+  .site-footer__top--svg {
+    height: 1rem;
+    margin-right: 1.3rem;
+  }
+}
 .site-footer__contact {
   display: flex;
   flex-direction: column;
@@ -194,6 +211,11 @@ h2, h3 {
 @media (min-width: 768px) {
   .site-footer__contact {
     width: 40%;
+  }
+}
+@media (min-width: 1280px) {
+  .site-footer__contact {
+    font-size: 0.7rem;
   }
 }
 .site-footer__contact-container {
@@ -209,7 +231,9 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .site-footer__contact-container {
-    width: 65%;
+    width: 52%;
+    line-height: 110%;
+    font-weight: 400;
   }
 }
 .site-footer__contact--name {
@@ -239,6 +263,12 @@ h2, h3 {
     top: 0;
   }
 }
+@media (min-width: 1280px) {
+  .site-footer__bottom--logo {
+    margin-right: 6rem;
+    width: 6rem;
+  }
+}
 .site-footer__bottom--text {
   font-size: 0.7rem;
   padding: 1.5rem 1rem 1rem 1rem;
@@ -247,6 +277,11 @@ h2, h3 {
   .site-footer__bottom--text {
     padding: 3rem 0 0 0;
     font-size: 1rem;
+  }
+}
+@media (min-width: 1280px) {
+  .site-footer__bottom--text {
+    font-size: 0.7rem;
   }
 }
 
@@ -286,7 +321,7 @@ h2, h3 {
 }
 .hero-banner__title {
   font-weight: 600;
-  padding-left: 16px;
+  padding-left: 1rem;
   color: #fff;
   z-index: 10;
 }
@@ -397,7 +432,7 @@ h2, h3 {
   }
 }
 .main-content__description--paragraph {
-  padding: 0 0 20px 0;
+  padding: 0 0 1.25rem 0;
   line-height: 150%;
 }
 @media (min-width: 768px) {
@@ -423,5 +458,11 @@ h2, h3 {
   .main-content__gallery--title {
     padding: 3rem 2.25rem 2.25rem 2.25rem;
     font-size: 2.8rem;
+  }
+}
+@media (min-width: 1280px) {
+  .main-content__gallery--title {
+    padding: 3rem 6rem 0 6rem;
+    font-size: 1.6rem;
   }
 }/*# sourceMappingURL=bio.css.map */
