--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -35,12 +35,11 @@
         left: 0;
         right: 0;
         bottom: 0;
-        // display: block;
     }
 
     &__title {
         font-weight: 600;
-        padding-left: 16px;
+        padding-left: 1rem;
         color: $primary-background;
         z-index: 10;
 
@@ -150,7 +149,7 @@
         }
 
         &--paragraph {
-            padding: 0 0 20px 0;
+            padding: 0 0 1.25rem 0;
             line-height: 150%;
 
             @include tablet {
@@ -175,6 +174,11 @@
             @include tablet {
                 @include tablet-padding;
                 font-size: 2.8rem;
+            }
+
+            @include desktop {
+                padding: 3rem 6rem 0 6rem;
+                font-size: 1.6rem;
             }
         }
     }
