--- a/styles/bio.css
+++ b/styles/bio.css
@@ -17,9 +17,15 @@
 .gallery-section__photo {
   max-width: 100%;
   padding: 0.313rem 0;
+  filter: grayscale(1);
+}
+.gallery-section__photo:hover {
+  filter: grayscale(0);
+  transition: 2s;
 }
 @media (min-width: 768px) {
   .gallery-section__photo {
+    padding: 1rem 0;
     width: 31%;
   }
 }
@@ -49,6 +55,7 @@
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -61,6 +68,10 @@ h2, h3 {
   display: flex;
   flex-direction: column;
 }
+.site-header:hover {
+  background-color: purple;
+  transition: 2s;
+}
 @media (min-width: 768px) {
   .site-header {
     flex-direction: row;
@@ -71,16 +82,18 @@ h2, h3 {
   width: 9rem;
   display: flex;
   align-self: center;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
 }
 @media (min-width: 768px) {
   .site-header__logo {
+    padding: 0;
     margin: 1rem 1rem 1rem 2.25rem;
   }
 }
 @media (min-width: 1280px) {
   .site-header__logo {
-    padding-left: 4rem;
+    width: 8rem;
+    padding-left: 2rem;
   }
 }
 .site-header__list {
@@ -97,7 +110,7 @@ h2, h3 {
 @media (min-width: 1280px) {
   .site-header__list {
     font-size: 0.6rem;
-    padding-left: 1rem;
+    padding-left: 6rem;
   }
 }
 .site-header__item {
@@ -140,7 +153,7 @@ h2, h3 {
 @media (min-width: 1280px) {
   .site-header__link--highlight {
     font-weight: 400;
-    padding-bottom: 2rem;
+    padding-bottom: 2.1rem;
     letter-spacing: 0.05rem;
   }
 }
@@ -215,7 +228,7 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .site-footer__contact {
-    font-size: 0.7rem;
+    font-size: 0.875rem;
   }
 }
 .site-footer__contact-container {
@@ -231,7 +244,7 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .site-footer__contact-container {
-    width: 52%;
+    width: 60%;
     line-height: 110%;
     font-weight: 400;
   }
@@ -281,7 +294,7 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .site-footer__bottom--text {
-    font-size: 0.7rem;
+    font-size: 0.875rem;
   }
 }
 
@@ -300,13 +313,12 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .hero-banner {
-    min-height: 33rem;
+    min-height: 50vh;
   }
 }
 @media (min-width: 1280px) {
   .hero-banner {
-    min-height: 47rem;
-    min-width: 20rem;
+    min-height: 60vh;
   }
 }
 .hero-banner:before {
@@ -384,8 +396,8 @@ h2, h3 {
   .main-content__about {
     padding: 0.5rem 10rem 0.5rem 10rem;
     line-height: 150%;
-    font-size: 1rem;
-    width: 62%;
+    font-size: 1.3rem;
+    width: 75%;
   }
 }
 @media (min-width: 768px) {
@@ -395,7 +407,7 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .main-content__about--reference {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
   }
 }
 .main-content__description--title {
@@ -412,7 +424,7 @@ h2, h3 {
 @media (min-width: 1280px) {
   .main-content__description--title {
     padding: 2rem 0 1.5rem 10rem;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 }
 .main-content__description-container {
@@ -443,7 +455,7 @@ h2, h3 {
 }
 @media (min-width: 1280px) {
   .main-content__description--paragraph {
-    font-size: 0.7rem;
+    font-size: 0.875rem;
     width: 49%;
   }
 }
