--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -18,12 +18,11 @@
     position: relative;
 
     @include tablet {
-        min-height: 33rem;
+        min-height: 50vh;
     }
 
     @include desktop {
-        min-height: 47rem;
-        min-width: 20rem;
+        min-height: 60vh;
     }
 
     &:before {
@@ -82,7 +81,7 @@
         }
 
         @include desktop {
-            @include desktop-larger-padding;
+            @include desktop-larger-padding; 
         }
     }
 
@@ -99,8 +98,8 @@
         @include desktop {
             @include desktop-larger-padding;
             line-height: 150%;
-            font-size: 1rem;
-            width: 62%;
+            font-size: 1.3rem;
+            width: 75%;
         }
 
         &--reference {
@@ -110,7 +109,7 @@
             }
 
             @include desktop {
-                font-size: 0.75rem;
+                font-size: 0.875rem;
             }
         }
     }
@@ -129,7 +128,7 @@
 
             @include desktop {
                 padding: 2rem 0 1.5rem 10rem;
-                font-size: 1.1rem;
+                font-size: 1.3rem;
             }
         }
 
@@ -158,7 +157,7 @@
             }
 
             @include desktop {
-                font-size: 0.7rem;
+                font-size: 0.875rem;
                 width: 49%;
             }
         }
