--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -25,7 +25,7 @@
         min-height: 60vh;
     }
 
-    &:before {
+    &:before { //pseudo selector to create a darker piccure of the hero element
         content: '';
         position: absolute;
         background-color: $header-footer-background;
@@ -132,7 +132,7 @@
             }
         }
 
-        &-container {
+        &-container { //container to divide text on two columns
             @include primary-padding-content;
             width: 100%;
 
