--- a/styles/bio.css
+++ b/styles/bio.css
@@ -54,6 +54,10 @@
   font-family: Avenir, Arial, Helvetica, sans-serif;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -86,8 +90,8 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .site-header__logo {
+    margin: 1rem 2rem 1rem 1.3rem;
     padding: 0;
-    margin: 1rem 1rem 1rem 2.25rem;
   }
 }
 @media (min-width: 1280px) {
@@ -102,15 +106,10 @@ h2, h3 {
   display: flex;
   text-align: center;
 }
-@media (min-width: 768px) {
-  .site-header__list {
-    padding-left: 4rem;
-  }
-}
 @media (min-width: 1280px) {
   .site-header__list {
     font-size: 0.6rem;
-    padding-left: 6rem;
+    margin-left: 3rem;
   }
 }
 .site-header__item {
@@ -118,12 +117,12 @@ h2, h3 {
 }
 @media (min-width: 768px) {
   .site-header__item {
-    padding-left: 3rem;
+    margin: 0 1rem 0 2rem;
   }
 }
 @media (min-width: 1280px) {
   .site-header__item {
-    padding-left: 2rem;
+    margin: 0 1rem 0 1rem;
   }
 }
 .site-header__item--highlight {
