--- a/styles/bio.css
+++ b/styles/bio.css
@@ -476,4 +476,17 @@ h2, h3 {
     padding: 3rem 6rem 0 6rem;
     font-size: 1.6rem;
   }
+}
+
+.comment-box__form {
+  display: flex;
+}
+.comment-box__avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+.comment-box__wrapper {
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=bio.css.map */
