--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -183,3 +183,21 @@
     }
 
 }
+
+.comment-box {
+
+    &__form {
+        display: flex;
+    }
+
+    &__avatar {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+    }
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+}
