--- a/styles/bio.css
+++ b/styles/bio.css
@@ -301,6 +301,16 @@ h2, h3 {
   box-sizing: border-box;
 }
 
+::-moz-placeholder {
+  color: black;
+  padding: 0.5rem 0 0.5rem 0.5rem;
+}
+
+::placeholder {
+  color: black;
+  padding: 0.5rem 0 0.5rem 0.5rem;
+}
+
 .hero-banner {
   background-image: url(../assets/images/hero-bio.jpg);
   background-position: center;
@@ -478,15 +488,88 @@ h2, h3 {
   }
 }
 
+.comment-box {
+  margin: 1.5rem 1rem 1rem 1rem;
+}
+.comment-box__title {
+  font-size: 1.7rem;
+  padding-bottom: 1rem;
+}
 .comment-box__form {
   display: flex;
+  border-bottom: solid 0.15rem #e1e1e1;
+  padding-bottom: 1rem;
 }
 .comment-box__avatar {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
+  margin-top: 2.5rem;
 }
 .comment-box__wrapper {
   display: flex;
   flex-direction: column;
+  width: 100%;
+}
+.comment-box__label {
+  text-transform: uppercase;
+  color: #Afafaf;
+  font-weight: 600;
+  font-size: 0.8rem;
+  padding: 1rem 0 0.5rem 0;
+}
+.comment-box__input-name {
+  height: 2.25rem;
+}
+.comment-box__input-comment {
+  border-radius: 0.25rem;
+  height: 6rem;
+}
+.comment-box__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  background-color: #323232;
+  color: #fff;
+  font-size: 1.3rem;
+  border-radius: 0.5rem;
+  border: 0;
+  margin-top: 1rem;
+  height: 3rem;
+}
+.comment-box__default {
+  display: flex;
+  flex-direction: column;
+}
+.comment-box__card-default {
+  display: flex;
+  border-bottom: solid 0.15rem #e1e1e1;
+  padding: 1rem 0 1rem 0;
+}
+.comment-box__avatar-box {
+  display: flex;
+  padding-right: 1rem;
+}
+.comment-box__avatar-default {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #e1e1e1;
+}
+.comment-box__wrapper-default {
+  display: flex;
+  flex-direction: column;
+}
+.comment-box__top-box {
+  display: flex;
+  padding-bottom: 0.6rem;
+}
+.comment-box__name-default {
+  flex: 50%;
+  font-size: 1rem;
+}
+.comment-box__date-default {
+  color: #Afafaf;
+  font-size: 1rem;
 }/*# sourceMappingURL=bio.css.map */
