--- a/styles/bio.css
+++ b/styles/bio.css
@@ -166,11 +166,13 @@ h2, h3 {
   .site-footer {
     padding: 0;
     padding: 3rem 2.25rem 2.25rem 2.25rem;
+    margin-top: 2rem;
   }
 }
 @media (min-width: 1280px) {
   .site-footer {
     padding: 3rem 6rem 2.25rem 6rem;
+    margin-top: 2rem;
   }
 }
 @media (min-width: 768px) {
