--- a/styles/bio.css
+++ b/styles/bio.css
@@ -161,6 +161,7 @@ h2, h3 {
   background-color: #323232;
   color: #e1e1e1;
   position: relative;
+  margin-top: 1rem;
 }
 @media (min-width: 768px) {
   .site-footer {
@@ -497,10 +498,36 @@ h2, h3 {
   font-size: 1.7rem;
   padding-bottom: 1rem;
 }
+@media (min-width: 768px) {
+  .comment-box__title {
+    padding: 3rem 2.25rem 2.25rem 2.25rem;
+    font-size: 2.8rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comment-box__title {
+    display: flex;
+    padding: 3rem 6rem 0 6rem;
+    font-size: 1.6rem;
+  }
+}
 .comment-box__form {
   display: flex;
   border-bottom: solid 0.15rem #e1e1e1;
   padding-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .comment-box__form {
+    margin: 1.5rem 5rem 0 5rem;
+    padding-bottom: 2rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comment-box__form {
+    margin: 2rem 0;
+    width: 50%;
+    justify-content: center;
+  }
 }
 .comment-box__avatar {
   width: 3rem;
@@ -521,11 +548,16 @@ h2, h3 {
   padding: 1rem 0 0.5rem 0;
 }
 .comment-box__input-name {
+  border-radius: 0.25rem;
   height: 2.25rem;
+  background-color: #fafafa;
+  border: 0.063rem solid #e1e1e1;
 }
 .comment-box__input-comment {
   border-radius: 0.25rem;
   height: 6rem;
+  background-color: #fafafa;
+  border: 0.063rem solid #e1e1e1;
 }
 .comment-box__button {
   display: flex;
@@ -540,14 +572,46 @@ h2, h3 {
   margin-top: 1rem;
   height: 3rem;
 }
+@media (min-width: 768px) {
+  .comment-box__button {
+    text-align: center;
+    align-self: flex-end;
+    width: 11rem;
+    font-size: 1.1rem;
+    margin-top: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .comment-box__dynamic {
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comment-box__dynamic {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+}
 .comment-box__default {
   display: flex;
   flex-direction: column;
+}
+@media (min-width: 768px) {
+  .comment-box__default {
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
+  }
 }
 .comment-box__card-default {
   display: flex;
   border-bottom: solid 0.15rem #e1e1e1;
   padding: 1rem 0 1rem 0;
+}
+@media (min-width: 1280px) {
+  .comment-box__card-default {
+    width: 50%;
+    align-self: center;
+  }
 }
 .comment-box__avatar-box {
   display: flex;
