added api post comments for BIO

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -513,21 +513,16 @@ h2, h3 {
 }
 .comment-box__form {
   display: flex;
-  flex-direction: column;
   border-bottom: solid 0.15rem #e1e1e1;
   padding-bottom: 1rem;
 }
-@media (min-width: 768px) {
-  .comment-box__form {
-    margin: 1.5rem 5rem 0 5rem;
-    padding-bottom: 2rem;
-  }
+.comment-box__form-custom {
+  display: flex;
+  width: 100%;
 }
-@media (min-width: 1280px) {
-  .comment-box__form {
-    margin: 2rem 0;
-    width: 50%;
-    justify-content: center;
+@media (min-width: 768px) {
+  .comment-box__form-custom {
+    padding: 0.5rem 7.188rem 0.5rem 7.188rem;
   }
 }
 .comment-box__avatar {
@@ -582,6 +577,10 @@ h2, h3 {
     margin-top: 2rem;
   }
 }
+.comment-box__dynamic {
+  display: flex;
+  flex-direction: column;
+}
 @media (min-width: 768px) {
   .comment-box__dynamic {
     padding: 0.5rem 7.188rem 0.5rem 7.188rem;
@@ -618,6 +617,7 @@ h2, h3 {
 .comment-box__wrapper-default {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .comment-box__top-box {
   display: flex;
