--- a/styles/bio.css
+++ b/styles/bio.css
@@ -513,8 +513,12 @@ h2, h3 {
 }
 .comment-box__form {
   display: flex;
-  border-bottom: solid 0.15rem #e1e1e1;
   padding-bottom: 1rem;
+}
+@media (min-width: 1280px) {
+  .comment-box__form {
+    padding: 0.5rem 16rem 0.5rem 16rem;
+  }
 }
 .comment-box__form-custom {
   display: flex;
@@ -595,7 +599,8 @@ h2, h3 {
 }
 .comment-box__card-default {
   display: flex;
-  border-bottom: solid 0.15rem #e1e1e1;
+  border-bottom: solid 0.05rem #e1e1e1;
+  border-top: solid 0.05rem #e1e1e1;
   padding: 1rem 0 1rem 0;
 }
 @media (min-width: 1280px) {
